--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
 }
 
 .display {
-    height: 100px;
+    height: 60px;
     border-width: 2px;
     border-style: solid;
     margin: 20px 20px 0px 20px;
@@ -32,6 +32,8 @@ header {
     background-color: #1b263b;
     border-color: black;
     color: white;
+    text-align: right;
+    font-size: 50px;
 }
 
 .calculator {
